[workspace]
members = [
  "src/bullg",
  "src/bullg-crypto",
  "src/bullg-core",
  "src/bullg-config",
  "src/bullg-memory",
  "src/bullg-plugin-api",
  "src/bullg-plugins",
  "src/bullg-control-sync",
  "src/bullg-utils",
  "src/bullg-tracing",
  "src/bullg-logger",
  "src/bullg-errors",
  "src/bullg-gateway"
]
resolver = "3"

[workspace.metadata]
name = "BullG"

[workspace.package]
description = "BullG - 10x faster API & AI Gateway"
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["Vikash Kumar <vikashkumar0037@gmail.com>"]
homepage = "https://bullg.vikshro.in"
repository = "https://github.com/vikshrogit/BullGateway"
documentation = "https://bullg.vikshro.in/docs"
keywords = ["bullg", "bullg-gateway", "bullg-api", "bullg-gateway-api", "bullg-ai-gateway"]
categories = ["Networking", "Web", "AI", "Gateway", "API Management", "API Gateway", "AI Gateway"]
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
# Common utils
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
url = "2"
mime = "0.3"
percent-encoding = "2"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
rand = "0.9"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
tempfile = "3"
rmp-serde = "1"
chrono = "0.4"
# Parallel CPU work
rayon = "1.8"
async-trait = "0.1"

# Networking
tokio = { version = "1", features = ["full","rt-multi-thread", "macros", "signal", "sync", "time"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
h3 = "0.0.8"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
form_urlencoded = "1.2.2"
multer = "3.1"
matchit = { version = "0.8"}
quinn = "0.11"
tonic = {version = "0.14", features = ["transport"]}
tower = "0.5"
futures = "0.3"
#multipart = "0.18.0"
rustls = { version = "0.23", default-features = false, features = ["logging", "std"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Observability (keep all versions in sync!)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt", "json"] }
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["tonic", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-stdout = "0.30"
futures-util = "0.3"
# Storage
heed = "0.22"

# Plugin runtimes
fxhash = "0.2.1"
pyo3 = {version = "0.25", features = ["auto-initialize"]}
#rustpython-vm = { version = "0.4", default-features = false, features = ["serde"] }
#rustpython-compiler = "0.4"
boa_engine = "0.20"
rhai = { version = "1", features = ["serde"] }
libloading = "0.8"

[profile.dev]
incremental = false