
[package]
name = "bullg-config"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bullg-core = { path = "../bullg-core" }
