
[package]
name = "bullg-core"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "BullG Core Library for shared functionality across BullG projects."
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
