
[package]
name = "bullg-core"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "BullG Core Library for shared functionality across BullG projects."
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
form_urlencoded = { workspace = true }
tokio = { workspace = true }
multer = { workspace = true }
futures-util = { workspace = true }
heed = { workspace = true }
dashmap = { workspace = true }
rmp-serde = { workspace = true }
rustpython-vm = { workspace = true }
boa_engine = { workspace = true }
rhai = { workspace = true }
fxhash = { workspace = true }