
[package]
name = "bullg-gateway"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Gateway for BullG"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
chrono = {workspace = true }
bullg-core = { path = "../bullg-core" }
bullg-plugin-api = { path = "../bullg-plugin-api" }
bullg-plugins = { path = "../bullg-plugins" }
bullg-memory = { path = "../bullg-memory" }
