
[package]
name = "bullg-plugin-api"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
