
[package]
name = "bullg-plugin-api"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "BullG Plugin API for managing plugins at runtime"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
