
[package]
name = "bullg-plugins"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bullg-plugin-api = { path = "../bullg-plugin-api" }
reqwest = { workspace = true }
base64 = { workspace = true }