
[package]
name = "bullg-tracing"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Tracing and telemetry for BullG"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
opentelemetry-stdout = { workspace = true }