
[package]
name = "bullg-utils"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Utility functions for BullG"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
