
[package]
name = "bullg-control-sync"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "BullG Control Sync Library for managing BullG Gateway control synchronization."
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
bullg-crypto ={ path = "../bullg-crypto"}
bullg-core = { path = "../bullg-core" }
bullg-utils = { path = "../bullg-utils" }
