[package]
name = "bullg-crypto"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Bullg Crypto Library"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
base64 = {workspace = true}
regex = {workspace = true}
sha2 = {workspace = true}
sha1 = {workspace = true}
md-5 = {workspace = true}
hmac = {workspace = true}
rand = {workspace = true}
