[package]
name = "bullg-errors"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Errors Handler for BullG Gateway."
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }