
[package]
name = "bullg-memory"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Memory management for BullG"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
heed = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }
rmp-serde = { workspace = true }
