
[package]
name = "bullg-plugins"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
description = "Collection of plugins for BullG"
license = {workspace = true}
repository = {workspace = true}
homepage = {workspace = true}
documentation = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = {workspace = true}


[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
bullg-plugin-api = { path = "../bullg-plugin-api" }
reqwest = { workspace = true }
base64 = { workspace = true }